# kaltura-mcp

./: .editorconfig  .env.example  .env.remote.example  .env.stdio.example  .gitignore  .isort.cfg  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  build-multiarch-docker.sh  build-transport-docker-images.sh  config.yaml.example  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  setup_env.py  setup_kaltura_mcp.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  transport-tests.yml
architecture/: github-workflow-fix.md  transport-architecture.md  transport-base-interface.md  transport-client-examples.md  transport-factory.md  transport-http-implementation.md  transport-implementation-plan.md  transport-implementation-summary.md  transport-server-integration.md  transport-sse-implementation.md  transport-stdio-implementation.md  transport-test-plan.md
docs/: ANALYTICS_GRAPH_GUIDE.md  ANALYTICS_GUIDE.md  ANALYTICS_MIGRATION_GUIDE.md  KALTURA_ANALYTICS_GUIDE.md  MCP_USAGE_GUIDE.md  PROMPTS_AND_RESOURCES.md  TUTORIAL.md  index.md
docs/api-reference/: context-management.md  index.md  kaltura-client.md  resource-handlers.md  server-api.md  tool-handlers.md
docs/examples/: index.md  simple-client.md
docs/getting-started/: configuration.md  docker.md  index.md  installation.md  quick-start.md
docs/guides/: ci-cd.md  claude-integration-architecture.md  claude-integration-best-practices.md  claude-integration-quick-reference.md  claude-integration-setup.md  enhanced-file-uploads.md  extending-transport-architecture.md  index.md  transport-architecture.md
docs/reference/: KALTURA_ANALYTICS_GUIDE.md
examples/: README.md  analytics_examples.py  analytics_graph_visualization.py  basic_test.py  complete_test.py  debug_retention_calculation.py  demo_client.py  direct_stdio_client.py  enhanced_retention_analysis_prompt.md  http_client.py  kaltura_mcp_client.py  mcp_cli_guide.md  mcp_cli_wrapper.py  performance_test.py  programmatic_client.py  retention_analysis_example.md  retention_percentage_explanation.md  retention_time_conversion_example.md  simple_client.py  simple_demo_client.py  simple_functional_test.py  simple_subprocess_client.py  transport_client_examples.py  using_mcp_inspector.md  using_with_claude.md  using_with_mcp_cli.md  video_retention_visualization.py  working_mcp_client.py
kaltura_mcp/: __init__.py  config.py  server.py
kaltura_mcp/context/: __init__.py  pagination.py  selective.py  summarization.py
kaltura_mcp/kaltura/: __init__.py  client.py  errors.py
kaltura_mcp/prompts/: README.md  __init__.py  api_exploration.py  base.py  content_enrichment.py  content_workflow.py  reporting.py  user_management.py
kaltura_mcp/resources/: __init__.py  base.py  category.py  media.py  user.py
kaltura_mcp/tools/: __init__.py  base.py  category.py  enhanced_media.py  media.py  user.py
kaltura_mcp/transport/: __init__.py  base.py  http.py  sse.py  stdio.py
kaltura_mcp/utils/: README.md  __init__.py  chunked_uploader.py  mime_utils.py
memory-bank/: activeContext.md  progress.md
memory-bank/architecture/: code-quality-fixes-summary.md  github-workflow-fix-summary.md  integration-tests-fix-summary.md
plans/: COMPLEX-split-tools-modules.md  COMPLEX-tool-registry-pattern.md  ELEGANT-prompts-resources-implementation.md  QUICKWIN-development-tooling.md  QUICKWIN-extract-html-templates.md  QUICKWIN-local-monitoring.md  SIMPLE-basic-unit-tests.md  SIMPLE-configuration-management.md  VERYLARGE-pydantic-type-safety.md
plans/completed/: ELEGANT-modular-tools.md  QUICKWIN-secure-credential-file.md
scripts/: check.sh
src/kaltura_mcp/: __init__.py  kaltura_client.py  prompts.py  proxy_client.py  remote_server.py  resources.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_analytics.py  test_analytics_core.py  test_analytics_enhanced.py  test_category_resources.py  test_category_tools.py  test_chunked_uploader.py  test_config.py  test_context.py  test_dimension_handling.py  test_enhanced_media_upload_tool.py  test_error_handling.py  test_media_delete_tool.py  test_media_get_tool.py  test_media_update_tool.py  test_mime_utils.py  test_mock_api.py  test_prompts.py  test_resources.py  test_server.py  test_tool_registry.py  test_tools.py  test_user_resources.py  test_user_tools.py  test_validation.py  test_video_retention_integration.py  test_with_mock_api.py
tests/integration/: README.md  README_ENHANCED_TESTS.md  __init__.py  config.json.example  conftest.py  direct_api_test.py  enhanced_client.py  enhanced_server.py  enhanced_server_runner.py  inspect_mcp.py  inspect_mcp_client.py  run_enhanced_server.py  run_single_test.py  test_advanced_transport_integration.py  test_category_integration.py  test_context_management.py  test_full_mcp_flow.py  test_mcp_client.py  test_media_integration.py  test_server_integration.py  test_transport_end_to_end.py  test_transport_factory_integration.py  test_transport_integration.py  test_user_integration.py  utils.py
tests/mocks/: README.md  (+2 more)
(+13 files in other folders)
