[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaltura-mcp"
version = "0.1.0"
description = "Kaltura MCP Server for LLM integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kaltura MCP Team", email = "example@example.com"}
]
dependencies = [
    "mcp>=1.4.1",
    "KalturaApiClient>=18.0.0",
    "pyyaml>=6.0",
    "anyio[trio]>=3.6.2",
    "trio>=0.29.0",
    "aiohttp>=3.8.5",
    "python-magic>=0.4.27",
    "requests-toolbelt>=1.0.0",
    "lxml>=5.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "requests>=2.31.0",
    "sseclient>=0.0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.1",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
kaltura-mcp = "kaltura_mcp.server:main"

[tool.setuptools]
packages = ["kaltura_mcp"]

[tool.black]
line-length = 130
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]  # Ignore line length errors
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files

[tool.pytest.ini_options]
asyncio_mode = "strict"