[project]
name = "kaltura-mcp"
version = "0.1.0"
description = "Model Context Protocol server for secure, read-only Kaltura API operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zohar Babin", email = "zohar@babin.co.il"}
]
keywords = ["kaltura", "mcp", "model-context-protocol", "video", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/zoharbabin/kaltura-mcp"
Repository = "https://github.com/zoharbabin/kaltura-mcp"
Issues = "https://github.com/zoharbabin/kaltura-mcp/issues"
Documentation = "https://github.com/zoharbabin/kaltura-mcp#readme"

dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "KalturaApiClient>=19.0.0,<20.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.0.0,<24.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kaltura-mcp = "kaltura_mcp.server:main"